--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
-    <div id="map"></div>
+
+    <div id="container" class="flex-col">
+      <header></header>
+      <div id="map"></div>
+    </div>
 
     <script src="js/app.js"></script>
     <script async defer
