Add hamburger icon to header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <body>
 
     <div id="container" class="flex-col">
-      <header></header>
+      <header>
+        <a href="#" class="menu-btn"></a>
+      </header>
       <div id="map"></div>
     </div>
 
