--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div id="container" class="flex-col">
       <header>
         <a href="#" class="menu-btn"></a>
+        <h1 class="main-heading">Barcelona Tourist Attractions</h1>
       </header>
       <div id="map"></div>
     </div>
