--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <link href="css/styles.css" rel="stylesheet">
   </head>
-  <body>
-
+  <body class="menu-hidden">
     <div id="container" class="flex-col">
       <header>
         <a href="#" class="menu-btn"></a>
         <h1 class="main-heading">Barcelona Tourist Attractions</h1>
       </header>
+      <nav>
+        hello
+      </nav>
       <div id="map"></div>
     </div>
 
+    <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUWMwiTJbxBbVueazrlgmVqo7KYOCoDco&v=3&callback=initMap">
