--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Barcelona Tourist Attractions</title>
   </head>
   <body class="menu-hidden">
     <div id="container" class="flex-col">
