--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <div id="map"></div>
     </div>
 
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/knockout/dist/knockout.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
     <script async defer
