--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" class="searchbox" data-bind="value: filter, valueUpdate: 'afterkeydown'">
         <!-- End credit -->
         <ul data-bind="foreach: filteredLocations()">
-          <li data-bind="text: title"></li>
+          <li><a href="#" data-bind="text: title, click: $parent.clickLocation"></a></li>
         </ul>
       </nav>
       <div id="map"></div>
