--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <script src="js/ui.js"></script>
     <script src="js/app.js"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUWMwiTJbxBbVueazrlgmVqo7KYOCoDco&v=3&callback=exports.initMap"
-        onerror="exports.mapError()">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUWMwiTJbxBbVueazrlgmVqo7KYOCoDco&v=3&callback=BarcaMapApp.initMap"
+        onerror="BarcaMapApp.mapError()">
     </script>
 
   </body>
